# cf-invariants-jito-priorityfee

./: .gitignore  AI_DISCLOSURE.md  Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml
docs/: reachability.md
programs/priority-fee-distribution/: Cargo.toml
programs/priority-fee-distribution/src/: lib.rs  merkle_proof.rs
references/jito_pfd_ref/fuzz/jito_transfer_priority_fee_total/src/: main.rs
references/jito_pfd_ref/programs/vote-state/: Cargo.toml
references/jito_pfd_ref_planted_transfer_increments_total/: Cargo.toml
references/jito_pfd_ref_planted_transfer_increments_total/fuzz/jito_transfer_priority_fee_total/: Cargo.toml
references/jito_pfd_ref_planted_transfer_increments_total/programs/priority-fee-distribution/src/: lib.rs
