[workspace]
members = [
    "programs/priority-fee-distribution",
    "programs/vote-state",
]
resolver = "2"

# Matches cf-invariants-jito / cf-invariants-jito-tippayment port profile
# (also matches upstream mev-programs/Cargo.toml release profile shape).
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
