[package]
name = "jito-programs-vote-state"
version = "0.1.10"
edition = "2021"
license = "Apache-2.0"
authors = ["Jito Network <team@jito.network>"]
homepage = "https://jito.network"
repository = "https://github.com/jito-foundation/jito-programs"
description = "VoteState code copied from Solana."

# Pinned to cf-invariants-anchor's CI-green stack: anchor-lang 1.0.1, modular
# solana-3.x interfaces supplied transitively. solana-sdk-ids 3.x is what
# anchor-lang 1.0.1 itself pulls; we match.
[dependencies]
anchor-lang = "=1.0.1"
bincode = "1.3.3"
serde = "1.0.138"
serde_derive = "1.0.103"
solana-sdk-ids = "3"
